--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "advent of code 2021",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "prettier --list-different --write \"**/*.js\""
   },
   "author": "conor.sheehan.dev@gmail.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "prettier": "^2.5.0"
+  }
 }
