--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "advent of code 2021",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha \"./test/*.test.js\"",
     "lint": "prettier --list-different --write \"**/*.js\""
   },
   "author": "conor.sheehan.dev@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "chai": "^4.3.4",
+    "lodash": "^4.17.21",
+    "mocha": "^9.1.3",
     "prettier": "^2.5.0"
   }
 }
