--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha \"./test/*.test.js\"",
-    "lint": "prettier --list-different --write \"**/*.js\""
+    "lint": "prettier --list-different --write \"**/*.js\"",
+    "generate": "node ./tools/generate.js",
+    "generateAll": "npm run generate src __n__=$day && npm run generate test __n__=$day && npm run generate data __n__=$day"
   },
-  "precommit": ["lint"],
+  "precommit": [
+    "lint"
+  ],
   "author": "conor.sheehan.dev@gmail.com",
   "license": "MIT",
   "devDependencies": {
@@ -16,5 +20,8 @@
     "mocha": "^9.1.3",
     "prettier": "^2.5.0",
     "pre-commit": "^1.2.2"
+  },
+  "dependencies": {
+    "generate-template-files": "^3.2.0"
   }
 }
